# AlmostPinterest

./: .gitignore  pyproject.toml
almostPinterest/: db.json  manage.py
almostPinterest/accounts/: admin.py  managers.py  models.py
almostPinterest/accounts/migrations/: 0001_initial.py
almostPinterest/almostPinterest/: asgi.py  settings.py  urls.py  wsgi.py
almostPinterest/app/: models.py
almostPinterest/app/migrations/: 0001_initial.py  0002_alter_photo_author.py
almostPinterest/comments/: admin.py  models.py
almostPinterest/comments/migrations/: 0001_initial.py  0002_alter_comment_text.py
almostPinterest/favorites/: admin.py  models.py
almostPinterest/favorites/migrations/: 0001_initial.py  0002_rename_favorites_favorite.py
almostPinterest/followings/: admin.py  models.py
almostPinterest/followings/migrations/: 0001_initial.py  0002_rename_following_id_following_following_and_more.py
